--- a/views/login.html
+++ b/views/login.html
@@ -1,17 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
-</head>
-<body>
-<h1></h1>
-<p class="errorMessage">
-<form method="post" onsubmit="event.preventDefault();"><input type="text" name="username" placeholder="Username" value="username" /><input type="text" name="password" placeholder="Password" value="password" /><input type="email" name="email" placeholder="Email" value="email" />
-    <input type="text", name="message" placeholder="Message" cols="30", rows="10" />
-    <input type="submit" value="Login" onclick="form.submit()" /></form>
-</p>
-</body>
+    <style>
+      body {
+        background-image: url(/images/milad-fakurian-PGdW_bHDbpI-unsplash.jpg);
+        background-size: cover;
+        /* background-color: #EBECF0; */
+      }
+
+      form {
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        height: 250px;
+
+        margin-left: 580px;
+        margin-top: 100px;
+        padding: 30px;
+        /* From https://css.glass */
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+        border: 1px solid rgba(255, 255, 255, 0.3);
+      }
+      input {
+        height: 35px;
+        margin: 4px;
+        border-radius: 5px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        background: rgba(255, 255, 255, 0.243);
+       
+      }
+      
+      #login{
+          background-color: rgba(120, 6, 201, 0.92);
+          color: #fff;
+          font-size: 15px;
+          font-weight: bold;
+          height: 45px;
+      }
+    </style>
+  </head>
+  <body>
+      <h1 style="text-align:center; color: rgb(68, 65, 65); font-size:50px">Let's work together.</h1>
+    <form method="post" onsubmit="event.preventDefault();">
+      
+      <input
+        type="text"
+        name="username"
+        placeholder="&nbsp Username"
+       
+      />
+      <input
+        type="text"
+        name="password"
+        placeholder="&nbsp Password"
+       
+      />
+      <input type="email" name="email" placeholder="&nbsp Email" />
+      <input style="height: 50px"
+        type="text"
+        ,
+        name="message"
+        placeholder="&nbsp Message"
+        cols="30"
+        ,
+        rows="10"
+      />
+      <input type="submit" value="Send" onclick="form.submit()" id="login"/>
+    </form>
+    <p style="text-align:center; color: rgb(60, 58, 58);">*Write us in details what you need !!</p>
+  </body>
 </html>
